fixed a bug where you could scroll and see the tasks when the project bar is open on mobile

--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -37,7 +37,8 @@
 		}
 
 		&.open {
-			position: relative;
+			position: absolute;
+			top: f.rem(100);
 			width: 100%;
 			height: 100vh;
 			transform: translateX(0);
